--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 anyhow = "1.0.82"
 base64 = "0.22.0"
 blake3 = "1.5.1"
+chacha20poly1305 = {version = "0.10.1", features = ["rand_core"]}
 clap = { version = "4.5.4", features = ["derive"] }
 csv = "1.3.0"
 ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
