--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.82"
+axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
 base64 = "0.22.0"
 blake3 = "1.5.1"
-chacha20poly1305 = {version = "0.10.1", features = ["rand_core"]}
+chacha20poly1305 = { version = "0.10.1", features = ["rand_core"] }
 clap = { version = "4.5.4", features = ["derive"] }
 csv = "1.3.0"
 ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
@@ -20,5 +21,14 @@ ring = "0.17.8"
 serde = { version = "1.0.198", features = ["derive"] }
 serde_json = "1.0.116"
 serde_yaml = "0.9.34"
+tokio = { version = "1.37.0", features = [
+    "rt",
+    "rt-multi-thread",
+    "net",
+    "macros",
+    "fs",
+] }
 toml = "0.8.12"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 zxcvbn = "2.2.2"
