--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ chacha20poly1305 = { version = "0.10.1", features = ["rand_core"] }
 clap = { version = "4.5.4", features = ["derive"] }
 csv = "1.3.0"
 ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
+enum_dispatch = "0.3.13"
 jsonwebtoken = "9.3.0"
 rand = "0.8.5"
 ring = "0.17.8"
